# womf

./: CMakeLists.txt  LICENSE  README.md
example/: example.cpp  womftest.cpp
include/womf/: AudioResource.hpp  AudioStream.hpp  AudioStreamState.hpp  FileMagicNumber.hpp  MusicStream.hpp
include/womf/miniaudio/: miniaudio.h
src/womf/: AudioFormat.hpp  AudioResource.cpp  AudioStream.cpp  FileMagicNumber.cpp  MusicStream.cpp  SoundStream.cpp  SoundStream.hpp
